# SmartCityCpp

./: CMakeLists.txt  README.md  build.bat  run.bat
data/: city_map.txt  deliveries.txt  locations.txt  traffic_updates.txt  vehicles.txt
docs/: design.md
src/: main.cpp
src/core/: Customer.h  Location.h  Package.h  Vehicle.h
src/dataprocessor/: BinarySearch.h  ClosestPair.h  MergeSort.h  QuickSort.h  ZonePartitioner.h
src/graph/: BFS_DFS.h  BellmanFord.h  Dijkstra.h  MST.h  RoadNetwork.cpp  RoadNetwork.h  TopologicalSort.h
src/hashtable/: HashFunctions.h  HashTable.h  HashTableOA.h
src/io/: FileParser.cpp  FileParser.h  Reporter.cpp  Reporter.h
src/optimizer/: ActivitySelector.h  Knapsack.h  RouteOptimizer.cpp  RouteOptimizer.h
src/scheduler/: DeliveryScheduler.cpp  DeliveryScheduler.h  PriorityQueue.h
src/spatial/: BST.h  KDTree.h  QuadTree.cpp  QuadTree.h  SegmentTree.h
src/system/: CityMapManager.cpp  CityMapManager.h  EntityFactory.h  EntityManager.cpp  EntityManager.h  IPathFinder.h  SmartCitySystem.cpp  SmartCitySystem.h  SpatialQueryEngine.cpp  SpatialQueryEngine.h  TrafficMonitor.cpp  TrafficMonitor.h
tests/: test_graph.cpp  test_hashtable.cpp  test_integration.cpp  test_priorityqueue.cpp  test_quadtree.cpp
